[package]
name = "cpg"
version = "0.1.1"
edition = "2021"

description = "a CLI that consistently generates passwords given the same input."
license = "MIT"
readme = "README.md"
repository = "https://github.com/9elt/cpg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features=["derive"] }
home = "0.5.4"
rand = "0.8.5"

bcrypt-pbkdf = "0.10.0"
time-elapsed = "0.1.0"
